部分调整与优化 - 全面换用 Java17 的 HttpClient，彻底抛弃手写 URLConnection - 对 Java Sound SPI 使用继承方式，解决开发环境的无法播放问题